--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "react-flow-renderer": "^10.3.14",
     "react-moveable": "^0.38.4",
     "react-redux": "^8.0.2",
+    "react-router-dom": "^6.3.0",
     "react-scripts": "5.0.1",
     "redux": "^4.2.0",
     "typescript": "^4.7.4",
