add & edit elemeny modals

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -48,6 +48,8 @@
     "react/require-default-props": 0,
     "class-methods-use-this": 0,
     "no-loop-func": 0,
-    "@typescript-eslint/no-loop-func": "warn"
+    "@typescript-eslint/no-loop-func": "warn",
+    "react/prop-types": 0,
+    "react/display-name": 0
   }
 }
